--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "@babel/preset-env": "7.2.0",
     "@babel/preset-typescript": "7.1.0",
-    "typescript": "3.2.2"
+    "typescript": "3.2.2",
+    "nodemon": "1.13.0",
+    "concurrently": "3.5.1"
   },
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build:types:watch": "tsc -w",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "debug": "npm run build && npm run debug:watch",
+    "debug:serve": "nodemon --inspect lib/index.js", 
+    "debug:watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run build:types:watch\" \"npm run debug:serve\""
   }
 }
