--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/pg": "7.4.11",
     "concurrently": "3.5.1",
     "nodemon": "1.13.0",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
     "typescript": "3.2.2"
   },
   "scripts": {
