--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "debug:watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run build:types:watch\" \"npm run debug:serve\""
   },
   "dependencies": {
+    "@types/koa": "^2.0.48",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa-router": "^7.0.38",
+    "koa": "^2.6.2",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "pg": "7.7.1"
   }
 }
