--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "build:types": "tsc --emitDeclarationOnly",
     "build:types:watch": "tsc -w",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "debug": "npm run build && npm run debug:watch",
+    "start": "npm run build && npm run debug:watch",
     "debug:serve": "nodemon --inspect lib/index.js",
     "debug:watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run build:types:watch\" \"npm run debug:serve\""
   },
   "dependencies": {
+    "@types/inversify": "^2.0.33",
     "@types/koa": "^2.0.48",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.38",
+    "@types/reflect-metadata": "^0.1.0",
+    "inversify": "^5.0.1",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "pg": "7.7.1"
+    "pg": "7.7.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
